Fixed issue on zoom overflow with figure-box

--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,7 @@ a {
   display: flex;
   flex: 1;
   max-height: 350px;
+  max-width: 572.4px;
   width: auto;
   height: auto;
 }
@@ -102,6 +103,11 @@ a {
   padding-top: 30px;
 }
 
+.boxes {
+  display: flex;
+  flex-direction: row;
+}
+
 .boxes > img {
   border-radius: 10px;
   width: 300px;
@@ -111,6 +117,9 @@ a {
   border: 3px solid #3882F6;
   margin-left: 40px;
   flex-shrink: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .descriptions {
@@ -197,6 +206,7 @@ a {
   height: 200px;
   background-color: #3882F6;
   align-items: center;
+  position: absolute;
 }
 
 .inside-box-left {
